--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,19 @@
+.monday {
+  width: 300px;
+  height: 100px;
+  color: yellow;
+  background-color: lightgreen; }
 
+.tuesday {
+  width: 300px;
+  height: 100px;
+  color: yellow;
+  background-color: lightgreen; }
+
+.wednesday {
+  width: 300px;
+  height: 100px;
+  color: yellow;
+  background-color: red; }
 
 /*# sourceMappingURL=style2.css.map */
